
* Version 1.0.38:
 - TLS forward secrecy support was added. Diffie-Hellman parameters
are loaded from the /etc/ssl/private/pure-ftpd-dhparams.pem file.

* Version 1.0.37:
 - The -C: prefix can be added to the cipher suite in order to make valid
client certificates mandatory. This is no longer a compile-time option.
 - The Clear Command Channel (CCC) command is now supported.
 - SSL (v2, v3) is refused by default.
 - The PureDB backend supports the scrypt function in order to hash
passwords. This is the preferred algorithm, but requires the presence
of libsodium.
 - LDAP uid and gid values can over overridden in the LDAP configuration file.

* Version 1.0.36:
 - Support for external authentification handlers has been fixed.
Reported by Rasmus Fauske.
 - Directory listings can now report file sizes up to 1 exabyte.
 - Pure-FTPd is now useable on Win32 again.
 - Per popular request, dot files are now hidden from directory listings when
the -X flag is turned on.

* Version 1.0.35:
 - An old-standing bug has been fixed: when a file was renamed and
overwrote an existing file, the quota wasn't properly updated.
Reported by Hiramoto Kouji.

* Version 1.0.34:
 - Fix uploads. The bug was introduced in version 1.0.33. Thanks to
Hugo Gomes.

* Version 1.0.33:
 - SITE UTIME now supports the 2-arguments syntax in addition to the
5-arguments syntax.
 - Support for the MFMT command has been implemented.
 - A default directory can now be specified when using the LDAP backend.

* Version 1.0.32:
 - Support SHA1 password hashing in MySQL and PostgreSQL backends
 - Support for braces expansion in directory listings has been
disabled - Cf. CVE-2011-0418

* Version 1.0.31:
 - The list of allowed ciphers for SSL/TLS connections can now be
specified (--tlsciphersuite / -J).
 - Shell-like escaping is now partially handled when emulating the
"ls" command in order to improve compatibility with legacy clients.
 - Linking issues with MySQL support on Fedora have been solved.
