@@ -90,13 +90,14 @@ You just have to have fields with the following info:
 
 - The user's login.
 
-- The user's password, in plaintext, SHA1, MD5, crypt()ed or MySQL's password()
-format. Pure-FTPd also accepts the "any" value for the MySQLCrypt field.
-With "any", all hashing functions (not plaintext) are tried.
+- The user's password, hashed using scrypt or crypt(3). SHA1, MD5, and MySQL's
+password() format are supported for legacy reasons, but shouldn't be
+used any more. Pure-FTPd also accepts the "any" value for the MySQLCrypt field.
+With "any", all hash functions are sequentially tried.
 
 * RECOMMENDATION: Do not use SHA1, MD5, or, obviously, plaintext. Unless your
-system provides a decent crypt() function supporting bcrypt or scrypt,
-use a MySQL UDF to verify the hashed password.
+system provides a decent crypt() function, use a MySQL function to verify
+the hashed password or use scrypt.
 
 - The system uid to map the user to. This can be a numeric id or a user
 name, looked up at run-time.
