@@ -38,9 +38,8 @@ MYSQLDatabase   pureftpd
 
 
 # Mandatory : how passwords are stored
-# Valid values are : "cleartext", "crypt", "sha1", "md5" and "password"
+# Valid values are : "cleartext", "scrypt", "crypt", "sha1", "md5", "password" and "any"
 # ("password" = MySQL password() function)
-# You can also use "any" to try "crypt", "sha1", "md5" *and* "password"
 
 MYSQLCrypt      cleartext
 
@@ -57,14 +56,12 @@ MYSQLCrypt      cleartext
 # Very complex queries can be performed using these substitution strings,
 # especially for virtual hosting.
 
-
 # Query to execute in order to fetch the password
 
 MYSQLGetPW      SELECT Password FROM users WHERE User='\L'
 
 
 # Query to execute in order to fetch the system user name or uid
-
 MYSQLGetUID     SELECT Uid FROM users WHERE User='\L'
 
 
@@ -114,6 +111,7 @@ MYSQLGetDir     SELECT Dir FROM users WHERE User='\L'
 # MySQLGetBandwidthUL SELECT ULBandwidth FROM users WHERE User='\L'
 # MySQLGetBandwidthDL SELECT DLBandwidth FROM users WHERE User='\L'
 
+
 # Enable ~ expansion. NEVER ENABLE THIS BLINDLY UNLESS :
 # 1) You know what you are doing.
 # 2) Real and virtual users match.
@@ -123,7 +121,6 @@ MYSQLGetDir     SELECT Dir FROM users WHERE User='\L'
 
 # If you're using a transactionnal storage engine, you can enable SQL
 # transactions to avoid races. Leave this commented if you are using the
-# traditionnal MyIsam engine.
+# traditional MyIsam engine.
 
 # MySQLTransactions On
-
