@@ -8,25 +8,37 @@
 
 
 # If PostgreSQL listens to a TCP socket
+
 PGSQLServer     localhost
 PGSQLPort       5432 
 
+
 # *or* if PostgreSQL can only be reached through a local Unix socket
+
 # PGSQLServer     /tmp
 # PGSQLPort       .s.PGSQL.5432
 
+
 # Mandatory : user to bind the server as.
+
 PGSQLUser       postgres
 
+
 # Mandatory : user password. You *must* have a password.
+
 PGSQLPassword   rootpw
 
+
 # Mandatory : database to open.
+
 PGSQLDatabase   pureftpd
 
+
 # Mandatory : how passwords are stored
-# Valid values are : "cleartext", "crypt", "md5", "sha1" and "any"
+# Valid values are : "cleartext", "scrypt", "crypt", "md5", "sha1" and "any"
+
 PGSQLCrypt      cleartext
+
 
 # In the following directives, parts of the strings are replaced at
 # run-time before performing queries :
