@@ -1,6 +1,7 @@
 #ifndef __LOG_MYSQL_H__
 #define __LOG_MYSQL_H__ 1
 
+#define PASSWD_SQL_SCRYPT "scrypt"
 #define PASSWD_SQL_CRYPT "crypt"
 #define PASSWD_SQL_CLEARTEXT "cleartext"
 #define PASSWD_SQL_MYSQL "password"
